feat(cbs-koji): update to use the certificates in the user's location

--- a/SOURCES/cbs-koji.conf
+++ b/SOURCES/cbs-koji.conf
@@ -13,11 +13,11 @@ topurl = http://cbs.centos.org/kojifiles
 topdir = /mnt/koji
 
 ;client certificate
-cert = ~/.koji/client.crt
+cert = ~/.centos.cert
 
 ;certificate of the CA that issued the client certificate
-ca = ~/.koji/clientca.crt
+ca = ~/.centos-server-ca.cert
 
 ;certificate of the CA that issued the HTTP server certificate
-serverca = ~/.koji/serverca.crt
+serverca = /etc/ssl/certs/ca-bundle.cert
 
