--- a/SOURCES/cbs-koji.conf
+++ b/SOURCES/cbs-koji.conf
@@ -19,5 +19,5 @@ cert = ~/.centos.cert
 ca = ~/.centos-server-ca.cert
 
 ;certificate of the CA that issued the HTTP server certificate
-serverca = /etc/ssl/certs/ca-bundle.crt
+serverca = /etc/pki/tls/certs/ca-bundle.trust.crt
 
